packages/tree-sitter-icu-messageformat/test/corpus/arguments.txt
================================================================================
Simple argument
================================================================================
Hello, {name}!
--------------------------------------------------------------------------------

(message
  (literal)
  (argument
    (identifier))
  (literal))

================================================================================
Multiple arguments
================================================================================
{greeting}, {name}!
--------------------------------------------------------------------------------

(message
  (argument
    (identifier))
  (literal)
  (argument
    (identifier))
  (literal))
