packages/tree-sitter-icu-messageformat/test/corpus/date_time.txt
================================================================================
Date without style
================================================================================
{d, date}
--------------------------------------------------------------------------------

(message
  (date_element
    (identifier)))

================================================================================
Date with style
================================================================================
{d, date, short}
--------------------------------------------------------------------------------

(message
  (date_element
    (identifier)
    (date_time_style
      (style_text))))

================================================================================
Date with skeleton
================================================================================
{d, date, ::yyyy.MM.dd}
--------------------------------------------------------------------------------

(message
  (date_element
    (identifier)
    (date_time_style
      (date_time_skeleton))))

================================================================================
Time without style
================================================================================
{t, time}
--------------------------------------------------------------------------------

(message
  (time_element
    (identifier)))

================================================================================
Time with style
================================================================================
{t, time, full}
--------------------------------------------------------------------------------

(message
  (time_element
    (identifier)
    (date_time_style
      (style_text))))
