packages/tree-sitter-icu-messageformat/test/corpus/edge_cases.txt
================================================================================
Stray less-than sign
================================================================================
I <3 cats
--------------------------------------------------------------------------------

(message
  (literal)
  (literal)
  (literal))

================================================================================
Stray greater-than sign
================================================================================
5 > 3
--------------------------------------------------------------------------------

(message
  (literal)
  (literal)
  (literal))

================================================================================
Stray closing brace
================================================================================
}
--------------------------------------------------------------------------------

(message
  (literal))

================================================================================
Empty message
================================================================================

--------------------------------------------------------------------------------

(message)

================================================================================
Plural with negative offset
================================================================================
{n, plural, offset: -2 =-1 {neg one} other {rest}}
--------------------------------------------------------------------------------

(message
  (plural_element
    (identifier)
    (offset
      (number))
    (plural_option
      (plural_key)
      (literal))
    (plural_option
      (plural_key)
      (literal))))

================================================================================
Select with digit-starting keys
================================================================================
{level, select, 1 {one} 2 {two} other {other}}
--------------------------------------------------------------------------------

(message
  (select_element
    (identifier)
    (select_option
      (select_key)
      (literal))
    (select_option
      (select_key)
      (literal))
    (select_option
      (select_key)
      (literal))))
