packages/tree-sitter-icu-messageformat/test/corpus/number.txt
================================================================================
Number without style
================================================================================
{count, number}
--------------------------------------------------------------------------------

(message
  (number_element
    (identifier)))

================================================================================
Number with style
================================================================================
{price, number, currency}
--------------------------------------------------------------------------------

(message
  (number_element
    (identifier)
    (number_style
      (style_text))))

================================================================================
Number with skeleton
================================================================================
{price, number, ::currency/CAD unit-width-narrow}
--------------------------------------------------------------------------------

(message
  (number_element
    (identifier)
    (number_style
      (number_skeleton))))
