packages/tree-sitter-icu-messageformat/test/corpus/quoting.txt
================================================================================
Quoted opening brace
================================================================================
You have '{count}' items
--------------------------------------------------------------------------------

(message
  (literal)
  (literal)
  (literal))

================================================================================
Unclosed quote before brace
================================================================================
You have '{count
--------------------------------------------------------------------------------

(message
  (literal))

================================================================================
Quoted pound in plural
================================================================================
{n, plural, other {'#' items}}
--------------------------------------------------------------------------------

(message
  (plural_element
    (identifier)
    (plural_option
      (plural_key)
      (literal))))

================================================================================
Quoted angle bracket
================================================================================
'<a>' is not a tag
--------------------------------------------------------------------------------

(message
  (literal))

================================================================================
Double apostrophe before argument
================================================================================
It''s {count} o''clock
--------------------------------------------------------------------------------

(message
  (literal)
  (argument
    (identifier))
  (literal))
