packages/tree-sitter-icu-messageformat/test/corpus/tags.txt
================================================================================
Self-closing tag
================================================================================
Hello<br/>world
--------------------------------------------------------------------------------

(message
  (literal)
  (self_closing_tag
    (tag_name))
  (literal))

================================================================================
Self-closing tag with space
================================================================================
<test-tag />
--------------------------------------------------------------------------------

(message
  (self_closing_tag
    (tag_name)))

================================================================================
Open/close tag
================================================================================
<b>bold text</b>
--------------------------------------------------------------------------------

(message
  (tag
    (open_tag
      (tag_name))
    (literal)
    (close_tag
      (tag_name))))

================================================================================
Nested tags
================================================================================
<a><b>nested</b></a>
--------------------------------------------------------------------------------

(message
  (tag
    (open_tag
      (tag_name))
    (tag
      (open_tag
        (tag_name))
      (literal)
      (close_tag
        (tag_name)))
    (close_tag
      (tag_name))))

================================================================================
Tag with arguments
================================================================================
<bold>You have {count, plural, one {<italic>#</italic> apple} other {<italic>#</italic> apples}}</bold>
--------------------------------------------------------------------------------

(message
  (tag
    (open_tag
      (tag_name))
    (literal)
    (plural_element
      (identifier)
      (plural_option
        (plural_key)
        (tag
          (open_tag
            (tag_name))
          (pound)
          (close_tag
            (tag_name)))
        (literal))
      (plural_option
        (plural_key)
        (tag
          (open_tag
            (tag_name))
          (pound)
          (close_tag
            (tag_name)))
        (literal)))
    (close_tag
      (tag_name))))
